updated credentials manager path

--- a/dotfiles/git/.gitconfig
+++ b/dotfiles/git/.gitconfig
@@ -4,4 +4,4 @@
 [init]
 	defaultBranch = master
 [credential]
-	helper = /mnt/c/Program Files/Git/mingw64/bin/git-credential-manager.exe
+	helper = "/mnt/c/Program Files/Git/mingw64/bin/git-credential-manager.exe"
